--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="GridRunners - Fast-paced multiplayer maze game"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -24,7 +24,38 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    
+    <!-- Preload critical fonts -->
+    <link 
+      rel="preload" 
+      href="/fonts/static/Orbitron-Regular.ttf" 
+      as="font" 
+      type="font/ttf" 
+      crossorigin="anonymous"
+    />
+    <link 
+      rel="preload" 
+      href="/fonts/static/Orbitron-Medium.ttf" 
+      as="font" 
+      type="font/ttf" 
+      crossorigin="anonymous"
+    />
+    <link 
+      rel="preload" 
+      href="/fonts/static/Orbitron-SemiBold.ttf" 
+      as="font" 
+      type="font/ttf" 
+      crossorigin="anonymous"
+    />
+    <link 
+      rel="preload" 
+      href="/fonts/static/Orbitron-Bold.ttf" 
+      as="font" 
+      type="font/ttf" 
+      crossorigin="anonymous"
+    />
+    
+    <title>GridRunners</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
